[gd_scene load_steps=8 format=3 uid="uid://e5kbp44kmm52"]

[ext_resource type="Script" uid="uid://u56r68hortcu" path="res://scripts/menus/initial_menu.gd" id="1_w3op8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qak31"]
bg_color = Color(0.0941176, 0.447059, 0.768627, 1)

[sub_resource type="ButtonGroup" id="ButtonGroup_yjdjj"]

[sub_resource type="Resource" id="Resource_5g4d2"]
metadata/__load_path__ = "res://button_group_ia2.tres"

[sub_resource type="Resource" id="Resource_6ti70"]
metadata/__load_path__ = "res://button_group_ia2.tres"

[sub_resource type="Resource" id="Resource_xkl08"]
metadata/__load_path__ = "res://button_group_ia2.tres"

[sub_resource type="Resource" id="Resource_ia2iv"]
metadata/__load_path__ = "res://button_group_ia2.tres"

[node name="InitialPanel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qak31")
script = ExtResource("1_w3op8")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -174.5
offset_top = 80.0
offset_right = 174.5
offset_bottom = 147.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "Jogo da Velha 2"

[node name="LocalGame" type="Button" parent="."]
layout_mode = 0
offset_left = 110.0
offset_top = 246.0
offset_right = 159.0
offset_bottom = 277.0
text = "Local"

[node name="IAGame" type="Button" parent="."]
layout_mode = 0
offset_left = 110.0
offset_top = 301.0
offset_right = 159.0
offset_bottom = 332.0
text = "x IA"

[node name="IAxIAGame" type="Button" parent="."]
layout_mode = 0
offset_left = 112.0
offset_top = 355.0
offset_right = 161.0
offset_bottom = 386.0
text = "IA x IA"

[node name="panel_Local" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -80.0
offset_right = 144.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="panel_Local"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="panel_Local/MarginContainer"]
layout_mode = 2

[node name="Label1player" type="Label" parent="panel_Local/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Nome 1º Jogador:"
horizontal_alignment = 1

[node name="NamePlayer" type="LineEdit" parent="panel_Local/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2player" type="Label" parent="panel_Local/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Nome 2º Jogador"
horizontal_alignment = 1

[node name="NamePlayer2" type="LineEdit" parent="panel_Local/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StartGameLocal" type="Button" parent="panel_Local/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Começar Jogo"

[node name="CloseButton2" type="Button" parent="panel_Local"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -31.0
offset_bottom = 31.0
grow_horizontal = 0
text = "X"

[node name="panel_IA" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -80.0
offset_right = 144.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="panel_IA"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="panel_IA/MarginContainer"]
layout_mode = 2

[node name="Label1player" type="Label" parent="panel_IA/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Seu Nome:"
horizontal_alignment = 1

[node name="NamePlayer" type="LineEdit" parent="panel_IA/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Difficult IA" type="Label" parent="panel_IA/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Dificuldade da IA:
"
horizontal_alignment = 1

[node name="CheckButton" type="CheckButton" parent="panel_IA/MarginContainer/VBoxContainer"]
layout_mode = 2
button_group = SubResource("ButtonGroup_yjdjj")
text = "Aleatório"

[node name="CheckButton2" type="CheckButton" parent="panel_IA/MarginContainer/VBoxContainer"]
layout_mode = 2
button_pressed = true
button_group = SubResource("ButtonGroup_yjdjj")
text = "Fácil"

[node name="CheckButton3" type="CheckButton" parent="panel_IA/MarginContainer/VBoxContainer"]
layout_mode = 2
button_group = SubResource("ButtonGroup_yjdjj")
text = "Médio"

[node name="CheckButton4" type="CheckButton" parent="panel_IA/MarginContainer/VBoxContainer"]
layout_mode = 2
button_group = SubResource("ButtonGroup_yjdjj")
text = "Difícil"

[node name="StartGameIA" type="Button" parent="panel_IA/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Começar Jogo"

[node name="CloseButton" type="Button" parent="panel_IA"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -31.0
offset_bottom = 31.0
grow_horizontal = 0
text = "X"

[node name="panel_IAxIA" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -140.0
offset_right = 175.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="panel_IAxIA"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="panel_IAxIA/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="panel_IAxIA/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Difficult IA" type="Label" parent="panel_IAxIA/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Dificuldade da IA 1:
"
horizontal_alignment = 1

[node name="IA1_1" type="CheckButton" parent="panel_IAxIA/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
button_group = SubResource("ButtonGroup_yjdjj")
text = "Aleatório"

[node name="IA1_2" type="CheckButton" parent="panel_IAxIA/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
button_pressed = true
button_group = SubResource("ButtonGroup_yjdjj")
text = "Fácil"

[node name="IA1_3" type="CheckButton" parent="panel_IAxIA/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
button_group = SubResource("ButtonGroup_yjdjj")
text = "Médio"

[node name="IA1_4" type="CheckButton" parent="panel_IAxIA/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
button_group = SubResource("ButtonGroup_yjdjj")
text = "Difícil"

[node name="VBoxContainer2" type="VBoxContainer" parent="panel_IAxIA/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Difficult IA" type="Label" parent="panel_IAxIA/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Dificuldade da IA 2:
"
horizontal_alignment = 1

[node name="IA2_1" type="CheckButton" parent="panel_IAxIA/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
button_group = SubResource("Resource_5g4d2")
text = "Aleatório"

[node name="IA2_2" type="CheckButton" parent="panel_IAxIA/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
button_pressed = true
button_group = SubResource("Resource_6ti70")
text = "Fácil"

[node name="IA2_3" type="CheckButton" parent="panel_IAxIA/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
button_group = SubResource("Resource_xkl08")
text = "Médio"

[node name="IA2_4" type="CheckButton" parent="panel_IAxIA/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
button_group = SubResource("Resource_ia2iv")
text = "Difícil"

[node name="StartGameIAxIA" type="Button" parent="panel_IAxIA"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -57.0
offset_top = -80.0
offset_right = 57.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
text = "Começar Jogo"

[node name="CloseButton3" type="Button" parent="panel_IAxIA"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -31.0
offset_bottom = 31.0
grow_horizontal = 0
text = "X"

[connection signal="pressed" from="LocalGame" to="." method="_on_local_game_pressed"]
[connection signal="pressed" from="IAGame" to="." method="_on_ia_game_pressed"]
[connection signal="pressed" from="IAxIAGame" to="." method="_on_i_ax_ia_game_pressed"]
[connection signal="text_changed" from="panel_Local/MarginContainer/VBoxContainer/NamePlayer" to="." method="_on_name_player_text_changed"]
[connection signal="text_changed" from="panel_Local/MarginContainer/VBoxContainer/NamePlayer2" to="." method="_on_name_player_2_text_changed"]
[connection signal="pressed" from="panel_Local/MarginContainer/VBoxContainer/StartGameLocal" to="." method="_on_start_game_local_pressed"]
[connection signal="pressed" from="panel_Local/CloseButton2" to="." method="_on_close_button_2_pressed"]
[connection signal="text_changed" from="panel_IA/MarginContainer/VBoxContainer/NamePlayer" to="." method="_on_name_player_text_changed"]
[connection signal="pressed" from="panel_IA/MarginContainer/VBoxContainer/CheckButton" to="." method="_on_check_button_pressed"]
[connection signal="pressed" from="panel_IA/MarginContainer/VBoxContainer/CheckButton2" to="." method="_on_check_button_2_pressed"]
[connection signal="pressed" from="panel_IA/MarginContainer/VBoxContainer/CheckButton3" to="." method="_on_check_button_3_pressed"]
[connection signal="pressed" from="panel_IA/MarginContainer/VBoxContainer/CheckButton4" to="." method="_on_check_button_4_pressed"]
[connection signal="pressed" from="panel_IA/MarginContainer/VBoxContainer/StartGameIA" to="." method="_on_start_game_ia_pressed"]
[connection signal="pressed" from="panel_IA/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="panel_IAxIA/MarginContainer/HBoxContainer/VBoxContainer/IA1_1" to="." method="_on_ia_1_1_pressed"]
[connection signal="pressed" from="panel_IAxIA/MarginContainer/HBoxContainer/VBoxContainer/IA1_2" to="." method="_on_ia_1_2_pressed"]
[connection signal="pressed" from="panel_IAxIA/MarginContainer/HBoxContainer/VBoxContainer/IA1_3" to="." method="_on_ia_1_3_pressed"]
[connection signal="pressed" from="panel_IAxIA/MarginContainer/HBoxContainer/VBoxContainer/IA1_4" to="." method="_on_ia_1_4_pressed"]
[connection signal="pressed" from="panel_IAxIA/MarginContainer/HBoxContainer/VBoxContainer2/IA2_1" to="." method="_on_ia_2_1_pressed"]
[connection signal="pressed" from="panel_IAxIA/MarginContainer/HBoxContainer/VBoxContainer2/IA2_2" to="." method="_on_ia_2_2_pressed"]
[connection signal="pressed" from="panel_IAxIA/MarginContainer/HBoxContainer/VBoxContainer2/IA2_3" to="." method="_on_ia_2_3_pressed"]
[connection signal="pressed" from="panel_IAxIA/MarginContainer/HBoxContainer/VBoxContainer2/IA2_4" to="." method="_on_ia_2_4_pressed"]
[connection signal="pressed" from="panel_IAxIA/StartGameIAxIA" to="." method="_on_start_game_i_ax_ia_pressed"]
[connection signal="pressed" from="panel_IAxIA/CloseButton3" to="." method="_on_close_button_3_pressed"]
